k8s/overlays/local/cap-user-service-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cap-user-service
spec:
  template:
    spec:
      imagePullSecrets: []
      containers:
      - name: cap-user-service
        image: cap-user-service:latest
        imagePullPolicy: Never
