k8s/overlays/local/kong-gateway-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-gateway-service
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 32080
    name: proxy
  - port: 8001
    targetPort: 8001
    nodePort: 32081
    name: admin
  - port: 8002
    targetPort: 8002
    nodePort: 32082
    name: manager
